# SpiraUniversalReporter

./: .env.example  .gitignore  CREDENTIALS_NEEDED.md  DEMO_GUIDE.md  README.md  RELEASE_NOTES.md  behave.ini  demo_end_to_end.py  less  pyproject.toml  requirements.txt  run_demo.py  test_spira_connection.py
.kiro/specs/cicd-spira-test-integration/: .config.kiro  design.md  requirements.md  tasks.md
docs/: architecture.md  ci-cd-integration.md  configuration.md  getting-started.md  parsers.md  tc-matching.md
examples/: 8fe10e59-0836-438a-b891-f5257ced4cf8-container.json  README.md  sample-allure-results.json  sample-junit-results.xml
features/: 01_project_structure.feature  02_configuration_manager.feature  03_parser_factory.feature  04_junit_parser.feature  05_extent_parser.feature  06_allure_parser.feature  07_test_case_mapper.feature  08_spira_api_client.feature  09_rate_limit_handler.feature  10_custom_property_matching.feature  11_evidence_upload.feature  12_main_orchestrator.feature  12_preflight_validation.feature  13_cli_entry_point.feature  13_cli_modes.feature  14_cucumber_bdd_tests.feature  15_final_checkpoint.feature  environment.py
features/steps/: __init__.py  allure_parser_steps.py  cli_and_docs_steps.py  cli_modes_steps.py  configuration_steps.py  extent_parser_steps.py  junit_parser_steps.py  orchestrator_steps.py  parser_factory_steps.py  project_structure_steps.py  spira_api_client_steps.py  test_case_mapper_steps.py
src/spira_integration/: __init__.py  cli.py  exceptions.py  logging_config.py  models.py  parser_base.py
tests/: __init__.py
(+28 files in other folders)
