[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spira-test-reporter"
version = "0.1.0"
description = "Parse CI/CD test results and send them to Spira test management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "behave>=1.2.6",
]

[project.scripts]
spira-report = "spira_integration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
